--- a/BllodSugarTester/BllodSugarTester/Views/Account/Register.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Account/Register.cshtml
@@ -34,6 +34,14 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        </div>
+    </div>
+
 }
 
 @section Scripts {
