--- a/BllodSugarTester/BllodSugarTester/Views/Account/Register.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Account/Register.cshtml
@@ -57,7 +57,7 @@
     </div>
 
 
-    <div class="form-group">
+    <div class="form-group">l
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
