Fixing the database additions

--- a/BllodSugarTester/BllodSugarTester/Views/Home/AddingSugar.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/AddingSugar.cshtml
@@ -18,8 +18,8 @@
     
     <div>
         
-        <label for="Size">Blood Sugar:</label>
-        <input type="text" id="blood" value="" />
+        <label for="Bs">Blood Sugar:</label>
+        <input type="text" id="blood" name="BloodSugar" value="" />
     </div>
     <div>
         <button onclick="newEvent()" type="submit" id="blood" class="btn btn-default">Submit Blood Sugar Number</button>
