--- a/BllodSugarTester/BllodSugarTester/Views/Home/AddingSugar.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/AddingSugar.cshtml
@@ -1,8 +1,13 @@
 ﻿@using Microsoft.AspNet.Identity
+@model BllodSugarTester.Models.AddingSugarViewModel
 <head>
     <title>Google Calendar API Quickstart</title>
     <meta charset='utf-8' />
 </head>
+@*@if(User.Identity.IsAuthenticated)
+{
+    someLabel = Membership.GetUser().;
+}*@
 <body>
     <p>Google Calendar API Quickstart</p>
 
@@ -29,30 +34,19 @@
        
     </div>
     <script type="text/javascript">
-      // Client ID and API key from the Developer Console
         var CLIENT_ID = '359173490060-648im88guobnnhdb2hoqf3e7taqbrvhr.apps.googleusercontent.com';
 
-      // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
 
-      // Authorization scopes required by the API; multiple scopes can be
-      // included, separated by spaces.
       var SCOPES = "https://www.googleapis.com/auth/calendar";
 
       var authorizeButton = document.getElementById('authorize-button');
       var signoutButton = document.getElementById('signout-button');
 
-      /**
-       *  On load, called to load the auth2 library and API client library.
-       */
       function handleClientLoad() {
         gapi.load('client:auth2', initClient);
       }
 
-      /**
-       *  Initializes the API client library and sets up sign-in state
-       *  listeners.
-       */
       function initClient() {
         gapi.client.init({
           discoveryDocs: DISCOVERY_DOCS,
@@ -69,10 +63,6 @@
         });
       }
 
-      /**
-       *  Called when the signed in status changes, to update the UI
-       *  appropriately. After a sign-in, the API is called.
-       */
       function updateSigninStatus(isSignedIn) {
           if (isSignedIn) {
 
@@ -85,26 +75,14 @@
         }
       }
 
-      /**
-       *  Sign in the user upon button click.
-       */
       function handleAuthClick(event) {
         gapi.auth2.getAuthInstance().signIn();
       }
 
-      /**
-       *  Sign out the user upon button click.
-       */
       function handleSignoutClick(event) {
         gapi.auth2.getAuthInstance().signOut();
       }
 
-      /**
-       * Append a pre element to the body containing the given message
-       * as its text node. Used to display the results of the API call.
-       *
-       * param {string} message Text to be placed in pre element.
-       */
       function appendPre(message) {
         var pre = document.getElementById('content');
         var textContent = document.createTextNode(message + '\n');
@@ -131,7 +109,7 @@
           var x = document.getElementById("blood").value;
           console.log(x);
           var request = gapi.client.calendar.events.insert({
-              "calendarId": "fb7ei8c6qvhl74q4iioc36gh00@group.calendar.google.com",
+              "calendarId": @Model.calenID,
               "start": {
                   "dateTime":(new Date()).toISOString(),
                   "timezone": "America/Chicago"
