--- a/BllodSugarTester/BllodSugarTester/Views/Home/google.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/google.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<BllodSugarTester.Models.caltoid>
+@using Microsoft.AspNet.Identity
 <head>
     <title>Google Calendar API Quickstart</title>
     <meta charset='utf-8' />
@@ -139,20 +140,6 @@
 
       }
 
-      //function makeApiCall() {
-      //    gapi.client.load('calendar', 'v3', function () {
-      //        //var requests = gapi.client.calendar.events.list({
-      //        var request = gapi.client.calendarList.insert(body = calendar_list_entry).execute();
-      //        //({
-      //        //    'calendarId': 'rope'
-      //        //});
-
-      //        request.execute(function (resp) {
-      //            console.log(resp)
-      //        });
-      //    });
-      //}
-        
       function newCalendar() {
           var request = gapi.client.calendar.calendars.insert({
               "resource":
@@ -179,9 +166,10 @@
           });
       }
       function newEvent() {
-
+           @{var y = "";
+               foreach (var info in Model) { if (info.Id == User.Identity.GetUserId()) { y += info.calenID; } } }
           var request = gapi.client.calendar.events.insert({
-              "calendarId": "fb7ei8c6qvhl74q4iioc36gh00@group.calendar.google.com",
+              "calendarId": '"' + y + '"',
               "start": {
                   "dateTime":(new Date()).toISOString(),
                   "timezone": "America/Chicago" 
