--- a/BllodSugarTester/BllodSugarTester/Views/Shared/_Layout.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Shared/_Layout.cshtml
@@ -17,13 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Blood Sugar Tester", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                   
+@if (Request.IsAuthenticated)
+{
+    <li>@Html.ActionLink("Add Numbers", "AddingSugar", "Home")</li>
+    <li>@Html.ActionLink("See Your Numbers", "DisplayNumbers", "Home")</li>
+}
+                   
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
