--- a/BllodSugarTester/BllodSugarTester/Views/Home/Index.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/Index.cshtml
@@ -2,30 +2,28 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div >
+    <h1>The Blood Sugar Logger</h1>
+    <p class="lead">This application is designed to help with the logging and sending of Blood Sugar Numbers. </p>
+    
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Congradulations its already set up for you. all you need to do is sign up or log in with google. its that simple.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+       
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Get more with Google</h2>
+        <p>if you have a google account and connect it with this application you can make use of google calendars to track your numbers. this application will allow you to keep your numbers in a seperate calendar for privacy if you so desire.</p>
+        <p></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Data Tracking</h2>
+        <p>Keep track of all your numbers. pull up previous moths number or even last weeks numbers</p>
+        
     </div>
 </div>
