--- a/BllodSugarTester/BllodSugarTester/Views/Home/DisplayNumbers.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/DisplayNumbers.cshtml
@@ -27,7 +27,7 @@
         if (info.UserId == User.Identity.GetUserId())
         {
     
-        $('displayed').append(
+        $('#displayed').append(
             "<tr>" +
             "<td>" + info.BloodSugar + "at" + info.Time + "on" + info.Date + "</td>"
 
