--- a/BllodSugarTester/BllodSugarTester/Views/Home/DisplayNumbers.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/DisplayNumbers.cshtml
@@ -21,7 +21,8 @@
 
 </div>
 <div>
-    <input onclick="month()" type="submit" id="unittts" class="btn btn-default" value="Submit">
+    @Html.ActionLink("View This Month's Number", "DisplayNumbersMonth", "Home")
+    
 </div>
 <script >
     function month() {
