--- a/BllodSugarTester/BllodSugarTester/Views/Home/Index.cshtml
+++ b/BllodSugarTester/BllodSugarTester/Views/Home/Index.cshtml
@@ -10,20 +10,20 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Getting Started</h2>
         <p>
-            Congradulations its already set up for you. all you need to do is sign up or log in with google. its that simple.
+            Congradulations it's already set up for you. All you need to do is sign up or log in with google. It's that simple.
         </p>
        
     </div>
     <div class="col-md-4">
-        <h2>Get more with Google</h2>
-        <p>if you have a google account and connect it with this application you can make use of google calendars to track your numbers. this application will allow you to keep your numbers in a seperate calendar for privacy if you so desire.</p>
+        <h2>Get More With Google</h2>
+        <p>If you have a google account and connect it with this application you can make use of google calendars to track your numbers. This application will allow you to keep your numbers in a seperate calendar for privacy if you so desire.</p>
         <p></p>
     </div>
     <div class="col-md-4">
         <h2>Data Tracking</h2>
-        <p>Keep track of all your numbers. pull up previous moths number or even last weeks numbers</p>
+        <p>Keep track of all your numbers. Pull up previous months number or even last weeks numbers</p>
         
     </div>
 </div>
